SQL Tables: * Users * User_games
Major code refactor.
Implement User and GameStat classes.
Finished RequestLogin packet.
Packet reader/writer and SpringUtilities moved to commons project.
Client, Part I.

--- a/GameOne_Server/todo.txt
+++ b/GameOne_Server/todo.txt
@@ -1,11 +1,6 @@
+IPConfig:
+* IPv6 support.
 Broadcast:
 * Todo.
-User:
-* Todo.
-Shutdown:
-* Build user button to shutdown in client for GMs.
 IncomingPacket:
 * Todo.
-RequestLogin:
-* Send the password already encryptyed from client.
-* Add hardware ID.
