Done for today... * Refined users table. * Implementation of Message packet. * Improvement to windows and addition of GameSelect.

--- a/GameOne_Server/todo.txt
+++ b/GameOne_Server/todo.txt
@@ -4,3 +4,7 @@ Broadcast:
 * Todo.
 IncomingPacket:
 * Todo.
+
+IS GM - DO WELCOME MSG.
+CREATE ANNOUNCEMENT TABLE.
+GMs can type in chat //abort //shut //restart
