Addition of announcements table and some admin commands. This commit contains some unfinished code refactor before a bigger rework to client<->server communication, therefore the code is not usable at this point.

--- a/GameOne_Server/todo.txt
+++ b/GameOne_Server/todo.txt
@@ -1,10 +1,12 @@
 IPConfig:
 * IPv6 support.
-Broadcast:
-* Todo.
 IncomingPacket:
 * Todo.
+User:
+* Add _currentGameId var.
 
-IS GM - DO WELCOME MSG.
-CREATE ANNOUNCEMENT TABLE.
-GMs can type in chat //abort //shut //restart
+Create build.xml:
+* Runnable jar for Launcher.java and convert to exe.
+* Runnable jar for Startup.java and convert to exe.
+* Copy sql and configs directories as they are.
+* Copy libs/* to install dir.
