Fix for network not working properly when sending batch packets.

--- a/GameOne_Server/todo.txt
+++ b/GameOne_Server/todo.txt
@@ -1,12 +1,13 @@
 IPConfig:
 * IPv6 support.
-IncomingPacket:
-* Todo.
 User:
 * Add _currentGameId var.
+GameClient#onDisconnect:
+* Todo.
 
 Create build.xml:
 * Runnable jar for Launcher.java and convert to exe.
 * Runnable jar for Startup.java and convert to exe.
 * Copy sql and configs directories as they are.
 * Copy libs/* to install dir.
+Create .bat/.sh files.
