Another packet refactor, until I will be completely happy with it! Merged client and server PacketInfo into commons. Drop of IIncomingPacket interface, use directly PacketReader.

--- a/GameOne_Client/todo.txt
+++ b/GameOne_Client/todo.txt
@@ -1,3 +1,5 @@
 add a readme telling that external program is needed to create the exe called launch4j.
 in any case include the already built program in the source.
 add icon.
+
+Make pacman and mario objects load on startup, and in case an admin make changes, broadcast to all available clients.
