--- a/GameOne_Client/todo.txt
+++ b/GameOne_Client/todo.txt
@@ -4,3 +4,8 @@ add icon.
 
 Make pacman and mario objects load on startup, and in case an admin make changes, broadcast to all available clients.
 When requesting a game, do not close the window with buttons and chat, just disable buttons, so people can still chat.
+
+Pacman move msg above dispose.
+
+call MapBuilder#reload() when editing map.
+call MarioScreen#reload() when game ends.
