--- a/GameOne_Client/todo.txt
+++ b/GameOne_Client/todo.txt
@@ -1,12 +1,65 @@
-* Add a readme telling that launch4j is needed in order to create exe out of jar file.
+* Add a Readme.txt telling that launch4j is needed in order to create exe out of jar file.
 * Include already built exe file in the source.
 * Add icon for the exe.
 * Add prefs.reg to build.xml
-
 * Update waiting rooms to show game configs.
 * Add latest matches to waiting rooms.
+* Add animations to Slide a Lama.
+* Continue from Game Configs part 2.
+* A soldier that is already blocking another soldier has to block a certain additional soldier.
+* When white queen should've burned it didn't burn for not eating (Checkers).
+* If a queen is blocked by a soldier and that soldier moves and that queen now can eat something, the soldier anyways gets burned.
+* Enlarge checkers window.
+* Improve the lags in Mario.
+* You fall from the elevator if you are level 2 or above and a cannon shoots you.
+* Chat //list line breaks are fucked up.
+* Shutdown doesn't disconnect players.
+* If a soldier blocks way to king for a threatening soldier, that soldier who's blocking can still move to any direction and cause bug (SP Only?)
 
-Slide a Lama:
-* Add animations.
+Exception in thread "pool-9-thread-1" java.lang.NullPointerException
+	at network.request.RequestGameStart.run(RequestGameStart.java:30)
+	at network.request.RequestGameStart.run(RequestGameStart.java:13)
+	at server.objects.GameClient.readPacket(GameClient.java:102)
+	at network.ReadHandler.lambda$completed$0(ReadHandler.java:22)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)
+	at java.lang.Thread.run(Thread.java:745)
 
-Continue from Game Configs part 2.
+Exception in thread "AWT-EventQueue-0" java.lang.NullPointerException
+	at mario.objects.AbstractObject.getNearbyObjects(AbstractObject.java:71)
+	at mario.SuperMario$Movement.keyPressed(SuperMario.java:485)
+	at java.awt.Component.processKeyEvent(Component.java:6491)
+	at java.awt.Component.processEvent(Component.java:6310)
+	at java.awt.Container.processEvent(Container.java:2236)
+	at java.awt.Window.processEvent(Window.java:2025)
+	at java.awt.Component.dispatchEventImpl(Component.java:4889)
+	at java.awt.Container.dispatchEventImpl(Container.java:2294)
+	at java.awt.Window.dispatchEventImpl(Window.java:2746)
+	at java.awt.Component.dispatchEvent(Component.java:4711)
+	at java.awt.KeyboardFocusManager.redispatchEvent(KeyboardFocusManager.java:1954)
+	at java.awt.DefaultKeyboardFocusManager.dispatchKeyEvent(DefaultKeyboardFocusManager.java:806)
+	at java.awt.DefaultKeyboardFocusManager.preDispatchKeyEvent(DefaultKeyboardFocusManager.java:1074)
+	at java.awt.DefaultKeyboardFocusManager.typeAheadAssertions(DefaultKeyboardFocusManager.java:945)
+	at java.awt.DefaultKeyboardFocusManager.dispatchEvent(DefaultKeyboardFocusManager.java:771)
+	at java.awt.Component.dispatchEventImpl(Component.java:4760)
+	at java.awt.Container.dispatchEventImpl(Container.java:2294)
+	at java.awt.Window.dispatchEventImpl(Window.java:2746)
+	at java.awt.Component.dispatchEvent(Component.java:4711)
+	at java.awt.EventQueue.dispatchEventImpl(EventQueue.java:758)
+	at java.awt.EventQueue.access$500(EventQueue.java:97)
+	at java.awt.EventQueue$3.run(EventQueue.java:709)
+	at java.awt.EventQueue$3.run(EventQueue.java:703)
+	at java.security.AccessController.doPrivileged(Native Method)
+	at java.security.ProtectionDomain$JavaSecurityAccessImpl.doIntersectionPrivilege(ProtectionDomain.java:76)
+	at java.security.ProtectionDomain$JavaSecurityAccessImpl.doIntersectionPrivilege(ProtectionDomain.java:86)
+	at java.awt.EventQueue$4.run(EventQueue.java:731)
+	at java.awt.EventQueue$4.run(EventQueue.java:729)
+	at java.security.AccessController.doPrivileged(Native Method)
+	at java.security.ProtectionDomain$JavaSecurityAccessImpl.doIntersectionPrivilege(ProtectionDomain.java:76)
+	at java.awt.EventQueue.dispatchEvent(EventQueue.java:728)
+	at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:201)
+	at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:116)
+	at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:105)
+	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:101)
+	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:93)
+	at java.awt.EventDispatchThread.run(EventDispatchThread.java:82)
